--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "shiftswap",
+  "name": "shiftswapforsues",
   "version": "1.0.0",
-  "description": "Synopsis",
+  "description": "ShiftSwap for Sues",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "webpack -d && cp src/index.html dist/index.html && cp -R src/app/img dist/app && webpack-dev-server --content-base src/ --inline --hot",
+    "postinstall": "webpack -p && cp src/index.html dist/index.html && cp -R src/app/img dist/app"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DrewWarrenTIY-tiy/shiftswap.git"
+  },
+  "author": "Drew Warren <drewwarrentiy@gmail.com> (http://github.com/drewwarrentiy)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DrewWarrenTIY-tiy/shiftswap.git"
+  },
+  "homepage": "https://github.com/DrewWarrenTIY-tiy/shiftswap/issues",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.26.0",
     "json-loader": "^0.5.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6"
+  },
+  "dependencies": {
+    "babel-loader": "^6.2.7",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
-    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
