--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "homepage": "https://github.com/DrewWarrenTIY-tiy/shiftswap/issues",
   "devDependencies": {
+  },
+  "dependencies": {
     "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "json-loader": "^0.5.4",
-    "react-hot-loader": "^3.0.0-beta.6"
-  },
-  "dependencies": {
-    "babel-loader": "^6.2.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^3.0.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
