--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DrewWarrenTIY-tiy/shiftswap.git"
+    "url": "git+https://drewwarrentiy-tiy.github.io/shiftswap/"
   },
   "author": "Drew Warren <drewwarrentiy@gmail.com> (http://github.com/drewwarrentiy)",
   "license": "ISC",
