--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "url": "https://github.com/DrewWarrenTIY-tiy/shiftswap.git"
   },
   "homepage": "https://github.com/DrewWarrenTIY-tiy/shiftswap/issues",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.0",
     "json-loader": "^0.5.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
