--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-router": "^3.0.0",
+    "react-router": "^4.0.0-alpha.5",
     "style-loader": "0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
