--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "firebase": "^3.6.1",
     "json-loader": "^0.5.4",
